--- a/onlineshopping/src/main/webapp/assets/css/myApp.css
+++ b/onlineshopping/src/main/webapp/assets/css/myApp.css
@@ -4,12 +4,35 @@
  * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap-shop-homepage/blob/master/LICENSE)
  */
 
+html {
+	height: 100%;
+} 
+
 body {
-  padding-top: 54px;
+	padding-top: 54px;
+	height: 100%;
 }
 
-@media (min-width: 992px) {
-  body {
-    padding-top: 56px;
-  }
+@media ( min-width : 992px) {
+	body {
+		padding-top: 56px;
+	}
+}
+
+/*
+	Custom Styling
+*/
+.wrapper {
+	min-height: 100%;
+	position: relative;
+}
+
+.content {
+	padding-bottom: 60px; /*Height of the footer*/
+}
+
+.foot {
+	position: absolute;
+	bottom: 15px;
+	height: 60px;
 }
